--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     <img src="broers2.jpg" alt="Foto van Avi en Shivano en ik">
                     <h3>Mijn broers</h3>
                     <p>
-                        Hierboven zie je een foto van mijn broers en ik het Barcalona stadion.
+                        Hierboven zie je een foto van mijn broers en ik in het Barcalona stadion.
                     </p>
                 </div>
             </div>
