--- a/index.html
+++ b/index.html
@@ -6,19 +6,11 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
-
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+
 
 </head>
 <body>
-
-
-<script>
-
-    alert("Welkom op mijn portfolio website")
-
-</script>
-
 
 <aside>
     <nav>
@@ -63,6 +55,7 @@
 
 <main>
     <header class="home" id="home"><br><br>
+        <p id="welkom"></p>
         <h1>Ryan Choennie</h1>
         <h5>Web Developer</h5>
         <img src="code.jpg" alt="Achtergrond foto van home">
@@ -171,14 +164,6 @@
             </form>
         </div>
 
-        <script type="text/javascript">
-            function Confirm(form){
-                alert("Je bericht is verzonden, dankjewel!");
-                form.submit();
-            }
-        </script>
-
-
 
     </section>
 
@@ -243,6 +228,6 @@
 
 </footer>
 
-
+<script src="javascript.js"></script>
 </body>
 </html>
