--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="container">
     <span class="text1">Welkom op</span>
     <span class="text2">mijn website</span>
-    <a href="welkom.html" target="_blank"><span class="text3">Klik hier om naar mijn website te gaan</span></a>
+    <a href="welkom.html"><span class="text3">Klik hier om naar mijn website te gaan</span></a>
 </div>
 
 </body>
