--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
 <div class="container">
     <span class="text1">Welkom op</span>
     <span class="text2">mijn website</span>
-    <a href="welkom.html"><span class="text3">Klik hier om naar mijn website te gaan</span></a>
 </div>
+
+<script>
+    let timer = setTimeout(function() {
+        window.location='welkom.html'
+    }, 5000);
+</script>
 
 </body>
 </html>
