--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <span class="text1">Welkom op</span>
     <span class="text2">mijn website</span>
 </div>
+    
+       <script>
+        let timer = setTimeout(function() {
+            window.location='index.html'
+        }, 5000);
+    </script>
+
 
 
 
