--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
        <script>
         let timer = setTimeout(function() {
-            window.location='index.html'
+            window.location='welkom.html'
         }, 5000);
     </script>
 
