--- a/welkom.html
+++ b/welkom.html
@@ -35,7 +35,7 @@
             <p>project</p>
         </a>
 
-        <a href="CV%20Ryan.docx" download><i class="material-icons md-36">person</i>
+        <a href="CV.pdf" download><i class="material-icons md-36">person</i>
             <p>Mijn CV</p>
         </a>
     </nav>
@@ -49,7 +49,7 @@
     <a href="#Folio">Folio</a>
     <a href="#contact">Contact</a>
     <a href="#project">Project</a>
-    <a href="CV%20Ryan.docx">Mijn CV</a>
+    <a href="CV.pdf">Mijn CV</a>
 
 </nav>
 
