--- a/welkom.html
+++ b/welkom.html
@@ -188,18 +188,18 @@
                 </tr>
                 <tr>
                     <td>2</td>
-                    <td></td>
-                    <td></td>
+                    <td>Verkeersplein</td>
+                    <td>HTML, CSS, Javascript</td>
                 </tr>
                 <tr>
                     <td>3</td>
-                    <td></td>
-                    <td></td>
+                    <td>Database voor autogarage</td>
+                    <td>HTML, CSS, PHP</td>
                 </tr>
                 <tr>
                     <td>4</td>
-                    <td></td>
-                    <td></td>
+                    <td>n.n.b.</td>
+                    <td>n.n.b.</td>
                 </tr>
                 </tbody>
             </table>
