--- a/welkom.html
+++ b/welkom.html
@@ -83,16 +83,11 @@
 
 
         <p>
-            <br>Ik heb ervaring met HTML, CSS, Javascript en PHP.<br>
+            <br>Ik heb ervaring met HTML, CSS, Javascript, PHP en Wordpress.<br>
 
         </p>
 
         <h3>My skills</h3>
-        <p>PHP</p>
-        <div class="container">
-            <div class="skills PHP">50%</div>
-        </div>
-
         <p>HTML 5</p>
         <div class="container">
             <div class="skills html">100%</div>
@@ -100,12 +95,22 @@
 
         <p>CSS</p>
         <div class="container">
-            <div class="skills css">100%</div>
+            <div class="skills CSS">100%</div>
         </div>
 
         <p>Javascript</p>
         <div class="container">
             <div class="skills Javascript">75%</div>
+        </div>
+
+        <p>PHP</p>
+        <div class="container">
+            <div class="skills PHP">90%</div>
+        </div>
+        
+        <p>Wordpress</p>
+        <div class="container">
+            <div class="skills Wordpress">50%</div>
         </div>
 
     </section>
